objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>Accountable_Banker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable Banker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_confirm_team_member_has_been_cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I confirm team member has been cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_OppTeamMember_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays OppTeamMember ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>